# move_ortega

./: .gitignore  LICENSE  README.md  pyproject.toml
ortega_2022/: __init__.py  ellipses.py  ortega.py  requirements.txt  traj.py  visualization.py
tests/: interaction_135161301_and_139585402_1min_sample_30min_delay.csv  main.py  setup.py
